--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
             <h1>Alex Carnelli</h1>
         </div>
         <div class="social-links">
-            <a href="link_a_tu_red_social" class="social-button facebook">Facebook</a>
-            <a href="link_a_tu_red_social" class="social-button twitter">Twitter</a>
-            <a href="link_a_tu_red_social" class="social-button instagram">Instagram</a>
-            <a href="link_a_tu_red_social" class="social-button TikTok">TikTok</a>
+            <a href="https://www.instagram.com/alex_gcrd/" class="social-button instagram">Instagram</a>
+            <a href="https://www.tiktok.com/@alex_gcrd?lang=es" class="social-button TikTok">TikTok</a>
             <!-- Añade más botones según tus redes sociales -->
         </div>
     </div>
